# cortejo

./: .flake8  .gitignore  LICENSE.txt  README.md  example_cortejo.toml  pyproject.toml  setpath.ps1  setpath.sh  test_cortejo.toml
cortejo/: __init__.py  __main__.py  ai.py  data.py  templates.py
cypress/e2e/: .gitkeep
cypress/templates/: __default__.j2
data/: devonfw.xlsx  test-data.xlsx
